[tool.poetry]
name = "vercel-python-sandbox"
version = "0.1.0"
description = "Vercel Sandbox Template"
authors = ["Joen Tan <joentze01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
python-pptx = "^1.0.2"
vercel = "^0.3.4"
nanoid = "^2.0.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
